<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/homeFragment"        android:title="@string/home"         android:icon="@android:drawable/ic_menu_compass" />
        <item android:id="@+id/searchFragment"      android:title="@string/search"        android:icon="@android:drawable/ic_menu_search" />
        <item android:id="@+id/postListingFragment" android:title="@string/post_listing"  android:icon="@android:drawable/ic_menu_add" />
        <item android:id="@+id/myListingsFragment"  android:title="@string/my_listings"   android:icon="@android:drawable/ic_menu_manage" />
        <item android:id="@+id/profileFragment"     android:title="@string/profile"       android:icon="@android:drawable/ic_menu_myplaces" />
    </group>
    <item android:id="@+id/nav_logout" android:title="@string/logout" android:icon="@android:drawable/ic_lock_power_off" />
</menu>
